--- a/bin/control
+++ b/bin/control
@@ -33,11 +33,13 @@ function start {
     echo "Starting MySQL cartridge"
     
     ${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariadb-5.5.34/lib/scaledb_cas ${OPENSHIFT_MARIADB_DIR}/bin/cas.cnf $OPENSHIFT_MARIADB_DB_HOST 15306 CAS1  > t1.txt 2>&1 &
+    sleep 5
     ${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariadb-5.5.34/lib/scaledb_slm ${OPENSHIFT_MARIADB_DIR}/bin/slm.cnf > t2.txt 2>&1 &
     
     
-    #sleep 20
-    #${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64/bin/mysqld --defaults-file=${OPENSHIFT_MARIADB_DIR}/bin/config.cnf > t3.txt 2>&1 &
+    sleep 20
+    
+    ${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64/bin/mysqld --defaults-file=${OPENSHIFT_MARIADB_DIR}/bin/config.cnf > t3.txt 2>&1 &
     
     #${OPENSHIFT_MARIADB_DIR/michael44/mariadb-5.5.34-linux-x86_64/bin/mysql -uroot -e "INSTALL PLUGIN scaledb SONAME 'ha_scaledb.so'"
 
