--- a/bin/control
+++ b/bin/control
@@ -41,6 +41,7 @@ function start {
     sleep 20
     
     ${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64/bin/mysqld --defaults-file=${OPENSHIFT_MARIADB_DIR}/config.cnf > t3.txt 2>&1 &
+    sleep 10
     
     ${OPENSHIFT_MARIADB_DIR}/michael44/mariadb-5.5.34-linux-x86_64/bin/mysql -uroot -e "INSTALL PLUGIN scaledb SONAME 'ha_scaledb.so'"
 
