--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -50,6 +50,6 @@ Endpoints:
   Private-Port: 3306
   Public-Port-Name: DB_PROXY_PORT
   Protocols:
-  - mysql
+  - tcp
 Install-Build-Required: false
 Compatible-Versions: []
