--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -51,6 +51,14 @@ Endpoints:
   Private-Port-Name: DB_PORT
   Private-Port: 23306
   Public-Port-Name: DB_PROXY_PORT
+- Private-IP-Name: DB_HOST
+  Private-Port-Name: GALERA_PORT_1
+  Private-Port: 4567
+  Public-Port-Name: NODE_GALERA_PORT_1
+- Private-IP-Name: DB_HOST
+  Private-Port-Name: GALERA_PORT_2
+  Private-Port: 4444
+  Public-Port-Name: NODE_GALERA_PORT_2
   Protocols:
   - tcp
 Install-Build-Required: false
