--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -43,6 +43,9 @@ Publishes:
     Type: ENV:NET_TCP:db:connection-info
   publish-mariadb-node:
     Type: NET_TCP:mariadb-cluster
+Subscribes:
+  set-mariadb-node:
+    Type: NET_TCP:mariadb-cluster
 Scaling:
   Min: 1
   Max: 2
