--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -54,6 +54,10 @@ Endpoints:
   Private-Port-Name: DB_PORT
   Private-Port: 23306
   Public-Port-Name: DB_PROXY_PORT
+- Private-IP-Name: CAS_HOST
+  Private--Port-Name: CAS_PORT
+  Private-Port: 15306
+  Public-Port-Name: CAS_PROXY_PORT
 - Private-IP-Name: DB_HOST
   Private-Port-Name: GALERA_PORT_1
   Private-Port: 4567
