--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -55,7 +55,7 @@ Endpoints:
   Private-Port: 23306
   Public-Port-Name: DB_PROXY_PORT
 - Private-IP-Name: CAS_HOST
-  Private--Port-Name: CAS_PORT
+  Private-Port-Name: CAS_PORT
   Private-Port: 15306
   Public-Port-Name: CAS_PROXY_PORT
 - Private-IP-Name: DB_HOST
