--- a/bin/control
+++ b/bin/control
@@ -36,10 +36,10 @@ function start {
   if ! is_running; then
     echo "Starting MySQL cartridge"
     
-#    ${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariadb-5.5.34/lib/scaledb_cas ${OPENSHIFT_MARIADB_DIR}/cas.cnf $OPENSHIFT_GEAR_DNS $OPENSHIFT_MARIADB_CAS_PROXY_PORT  CAS1  > t1.txt 2>&1 &
-#    sleep 5
+    ${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariadb-5.5.34/lib/scaledb_cas ${OPENSHIFT_MARIADB_DIR}/cas.cnf $OPENSHIFT_GEAR_DNS $OPENSHIFT_MARIADB_CAS_PROXY_PORT  CAS1  > t1.txt 2>&1 &
+    sleep 5
     
-#    ${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariadb-5.5.34/lib/scaledb_slm ${OPENSHIFT_MARIADB_DIR}/slm.cnf > t2.txt 2>&1 &
+    ${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariadb-5.5.34/lib/scaledb_slm ${OPENSHIFT_MARIADB_DIR}/slm.cnf > t2.txt 2>&1 &
     
 #    export LD_LIBRARY_PATH="${OPENSHIFT_MARIADB_DIR}/michael44/scaledb-latest-mariadb-5.5.34/lib"
 #    sleep 20
