--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -58,6 +58,10 @@ Endpoints:
   Private-Port-Name: CAS_PORT
   Private-Port: 15306
   Public-Port-Name: CAS_PROXY_PORT
+  - Private-IP-Name: DB_HOST
+  Private-Port-Name: SLM_PORT
+  Private-Port: 16306
+  Public-Port-Name: SLM_PROXY_PORT
 - Private-IP-Name: DB_HOST
   Private-Port-Name: GALERA_PORT_1
   Private-Port: 4567
