--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -44,12 +44,12 @@ Publishes:
   publish-mariadb-node:
     Type: NET_TCP:mariadb-cluster
   publish-cas-node:
-    Type: NET_TCP:cas-cluster
+    Type: NET_TCP:mariadb-cluster
 Subscribes:
   set-mariadb-node:
     Type: NET_TCP:mariadb-cluster
   set-slm-node:
-    Type: NET_TCP:slm-cluster
+    Type: NET_TCP:mariadb-cluster
 Scaling:
   Min: 1
   Max: 10
